--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+    <!--En-tête de la page-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,14 @@
 </head>
 
 <body>
+    <!--header-->
+    <header></header>
+
+    <!--main-->
+    <main></main>
+
+    <!--footer-->
+    <footer></footer>
 
 </body>
 
