add document assets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 
 <body>
     <!--header-->
-    <header></header>
+    <header>
+        <a href="#">
+            <img src="assets\images\logo\Reservia@3x.png" alt="Reservia">
+        </a>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </header>
 
     <!--main-->
     <main></main>
