add structure main

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
     <!--------------header-------------->
     <header class="header">
         <a href="#">
-            <img src="assets\images\logo\Reservia@3x.png" alt="Reservia">
-        </a>
+            <img src="assets\images\logo\Reservia@3x.png" alt="Reservia"></a>
         <nav>
             <ul>
                 <li>
-                    <a href="#hébergements" data-active="true">Hébergements</a>
+                    <a href="#hébergements">Hébergements</a>
                 </li>
                 <li>
-                    <a href="#activités" data-active="true">Activités à Marseille</a>
+                    <a href="#activités">Activités à Marseille</a>
                 </li>
                 <li>
                     <a href="#">S'inscrire</a>
@@ -38,12 +37,30 @@
         </nav>
 
     </header>
+    <!--------------header-------------->
 
     <!---------------main-------------->
-    <main></main>
+    <main class="main">
+        <!--Recherche-->
+        <section class="recherche">
 
-    <!--footer-->
-    <footer></footer>
+        </section>
+        <!--hébergement-->
+        <section class="hébergements" id="hébergements">
+
+        </section>
+        <!--activités-->
+        <section class="activités" id="activités">
+
+        </section>
+    </main>
+    <!--------------main-------------->
+
+    <!--------------footer-------------->
+    <footer class="footer">
+
+    </footer>
+    <!--------------footer-------------->
 
 </body>
 
