--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-    <!--------------header-------------->
+    <!--header-->
     <header class="header">
         <a href="#">
-            <img src="assets\images\logo\Reservia@3x.png" alt="Reservia"></a>
+            <img src="assets/images/logo/Reservia@3x.png" alt="Reservia"></a>
         <nav>
             <ul>
                 <li>
@@ -37,13 +37,35 @@
         </nav>
 
     </header>
-    <!--------------header-------------->
+    <!--header-->
 
-    <!---------------main-------------->
+    <!--main-->
     <main class="main">
         <!--Recherche-->
         <section class="recherche">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleinne nature</p>
+            <form method="post">
+                <p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="search" placeholder="Marseille, France" />
+                    <a href="">Rechercher</a>
+                </p>
+            </form>
 
+            <h3>Filtres</h3>
+            <i class="fas fa-money-bill-wave"></i>
+            <input type=button value=Économique />
+            <i class="fas fa-child"></i>
+            <input type=button value=Familial />
+            <i class="fas fa-heart"></i>
+            <input type=button value=Romantique />
+            <i class="fas fa-dog"></i>
+            <input type=button value=Animaux&nbsp;autorisés />
+
+            <p>
+                <i class="fas fa-info"></i> Plus de 500 logements sont disponible dans cette ville
+            </p>
         </section>
         <!--hébergement-->
         <section class="hébergements" id="hébergements">
@@ -54,13 +76,13 @@
 
         </section>
     </main>
-    <!--------------main-------------->
+    <!--main-->
 
-    <!--------------footer-------------->
+    <!--footer-->
     <footer class="footer">
 
     </footer>
-    <!--------------footer-------------->
+    <!--footer-->
 
 </body>
 
