--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="#activités">Activités à Marseille</a>
                 </li>
                 <li>
-                    <a href="#">S'inscrire</a>
+                    <a href="">S'inscrire</a>
                 </li>
             </ul>
         </nav>
@@ -69,10 +69,179 @@
         </section>
         <!--hébergement-->
         <section class="hébergements" id="hébergements">
+            <div>
+                <h2>Hébergements a Marseille</h2>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="Auberge la Cannebière"></image>
+                    <figcaption>
+                        <h3>Auberge la Cannebière</h3>
+                        <p>Nuit à partir de 25€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                        alt="Hôtel du port"></image>
+                    <figcaption>
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 52€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                        alt="Hôtel les mouettes"></image>
+                    <figcaption>
+                        <h3>Hôtel les mouettes</h3>
+                        <p>Nuit à partir de 76€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                        alt="Hôtel de la mer"></image>
+                    <figcaption>
+                        <h3>Hôtel de la mer</h3>
+                        <p>Nuit à partir de 46€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                        alt="Auberge Le Panier"></image>
+                    <figcaption>
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de 23€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                        alt="Hôtel chez Amina"></image>
+                    <figcaption>
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de 96€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <aside>
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                        alt="Hôtel Le soleil du matin"></image>
+                    <figcaption>
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de 128€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                        alt="Au coeur de l'eau Chambres d'hôtes"></image>
+                    <figcaption>
+                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                        <p>Nuit à partir de 71€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <image src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                        alt="Hôtel Tout bleu et Blanc"></image>
+                    <figcaption>
+                        <h3>Hôtel Tout bleu et Blanc</h3>
+                        <p>Nuit à partir de 68€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </figcaption>
+                </figure>
+
+            </aside>
 
         </section>
         <!--activités-->
         <section class="activités" id="activités">
+            <h2>Activités à Marseille</h2>
+            <figure>
+                <image src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                </image>
+                <figcaption>
+                    <h3>Vieux Port</h3>
+                </figcaption>
+            </figure>
+            <figure>
+                <image src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    alt="Fort de Pomègues"></image>
+                <figcaption>
+                    <h3>Fort de Pomègues</h3>
+                </figcaption>
+            </figure>
+            <figure>
+                <image src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                </image>
+                <figcaption>
+                    <h3>Îles du Frioul</h3>
+                </figcaption>
+            </figure>
+            <figure>
+                <image src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                    alt="Parc National des Calanques"></image>
+                <figcaption>
+                    <h3>Parc National des Calanques</h3>
+                </figcaption>
+            </figure>
+            <figure>
+                <image src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    alt="Notre-Dame-de-la-Garde"></image>
+                <figcaption>
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </figcaption>
+            </figure>
+            <figure>
+                <image src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                </image>
+                <figcaption>
+                    <h3>Parc Longchamp</h3>
+                </figcaption>
+            </figure>
 
         </section>
     </main>
@@ -80,6 +249,28 @@
 
     <!--footer-->
     <footer class="footer">
+        <nav>
+            <h2>A propos</h2>
+            <ul>
+                <li> <a href="">Fonctionnement du site</a></li>
+                <li><a href="">Conditions générales de vente</a></li>
+                <li><a href="">Données et confidentialité</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <h2>Nos hébergements</h2>
+            <ul>
+                <li><a href="">Charte qualité</a></li>
+                <li><a href="">Soumettre votre hôtel</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <h2>Assistance</h2>
+            <ul>
+                <li><a href="">Centre d'aide</a></li>
+                <li><a href="">Nous contacter</a></li>
+            </ul>
+        </nav>
 
     </footer>
     <!--footer-->
