modif article HTML

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--header-->
     <header class="header">
-            <img src="assets/images/logo/Reservia@3x.png" alt="Reservia"/>
+        <img src="assets/images/logo/Reservia@3x.png" alt="Reservia" />
         <nav>
             <ul>
                 <li>
@@ -70,23 +70,20 @@
         <section class="hébergements" id="hébergements">
             <div>
                 <h2>Hébergements a Marseille</h2>
-                    <figure>
-                        <image src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                            alt="Auberge la Cannebière"/>
-                        <figcaption>
-                            <h3>Auberge la Cannebière</h3>
-                            <p>Nuit à partir de 25€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </figcaption>
-                    </figure>
-                <figure>
+                <article>
+                    <image src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    alt="Auberge la Cannebière" />
+                    <h3>Auberge la Cannebière</h3>
+                    <p>Nuit à partir de 25€</p>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                        alt="Hôtel du port"/>
-                    <figcaption>
+                        alt="Hôtel du port" />
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 52€</p>
                         <i class="fas fa-star"></i>
@@ -94,12 +91,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                        alt="Hôtel les mouettes"/>
-                    <figcaption>
+                        alt="Hôtel les mouettes" />
                         <h3>Hôtel les mouettes</h3>
                         <p>Nuit à partir de 76€</p>
                         <i class="fas fa-star"></i>
@@ -107,25 +102,21 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                        alt="Hôtel de la mer"/>
-                    <figcaption>
-                        <h3>Hôtel de la mer</h3>
-                        <p>Nuit à partir de 46€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                    alt="Hôtel de la mer" />
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de 46€</p>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                        alt="Auberge Le Panier"/>
-                    <figcaption>
+                        alt="Auberge Le Panier" />
                         <h3>Auberge Le Panier</h3>
                         <p>Nuit à partir de 23€</p>
                         <i class="fas fa-star"></i>
@@ -133,12 +124,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                        alt="Hôtel chez Amina"/>
-                    <figcaption>
+                        alt="Hôtel chez Amina" />
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 96€</p>
                         <i class="fas fa-star"></i>
@@ -146,17 +135,15 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                    </figcaption>
-                </figure>
+                </article>
             </div>
 
             <aside>
                 <h2>Les plus populaires</h2>
                 <i class="fas fa-chart-line"></i>
-                <figure>
+                <article>
                     <image src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                        alt="Hôtel Le soleil du matin"/>
-                    <figcaption>
+                        alt="Hôtel Le soleil du matin" />
                         <h3>Hôtel Le soleil du matin</h3>
                         <p>Nuit à partir de 128€</p>
                         <i class="fas fa-star"></i>
@@ -164,12 +151,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                        alt="Au coeur de l'eau Chambres d'hôtes"/>
-                    <figcaption>
+                        alt="Au coeur de l'eau Chambres d'hôtes" />
                         <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71€</p>
                         <i class="fas fa-star"></i>
@@ -177,12 +162,10 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
-                    </figcaption>
-                </figure>
-                <figure>
+                </article>
+                <article>
                     <image src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                        alt="Hôtel Tout bleu et Blanc"/>
-                    <figcaption>
+                        alt="Hôtel Tout bleu et Blanc" />
                         <h3>Hôtel Tout bleu et Blanc</h3>
                         <p>Nuit à partir de 68€</p>
                         <i class="fas fa-star"></i>
@@ -190,54 +173,43 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
-                    </figcaption>
-                </figure>
-
+                </article>
             </aside>
 
         </section>
         <!--activités-->
         <section class="activités" id="activités">
             <h2>Activités à Marseille</h2>
-            <figure>
-                <image src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
-                <figcaption>
+            <article>
+                <image src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                    alt="Vieux Port" />
                     <h3>Vieux Port</h3>
-                </figcaption>
-            </figure>
-            <figure>
+            </article>
+            <article>
                 <image src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                    alt="Fort de Pomègues"/>
-                <figcaption>
+                    alt="Fort de Pomègues" />
                     <h3>Fort de Pomègues</h3>
-                </figcaption>
-            </figure>
-            <figure>
-                <image src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/>
-                <figcaption>
+            </article>
+            <article>
+                <image src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    alt="Îles du Frioul" />
                     <h3>Îles du Frioul</h3>
-                </figcaption>
-            </figure>
-            <figure>
+            </article>
+            <article>
                 <image src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                    alt="Parc National des Calanques"/>
-                <figcaption>
+                    alt="Parc National des Calanques" />
                     <h3>Parc National des Calanques</h3>
-                </figcaption>
-            </figure>
-            <figure>
+            </article>
+            <article>
                 <image src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                    alt="Notre-Dame-de-la-Garde"/>
-                <figcaption>
+                    alt="Notre-Dame-de-la-Garde" />
                     <h3>Notre-Dame-de-la-Garde</h3>
-                </figcaption>
-            </figure>
-            <figure>
-                <image src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/>
-                <figcaption>
+            </article>
+            <article>
+                <image src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    alt="Parc Longchamp" />
                     <h3>Parc Longchamp</h3>
-                </figcaption>
-            </figure>
+            </article>
 
         </section>
     </main>
