--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#hébergements">Hébergements</a>
                 </li>
                 <li class="navheader2">
-                    <a href="#activités">Activités à Marseille</a>
+                    <a href="#activités">Activités</a>
                 </li>
                 <li class="navheader3">
                     <a href="">S'inscrire</a>
@@ -42,29 +42,35 @@
     <main class="main">
         <!--Recherche-->
         <section class="recherche">
-            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre ville ou en pleinne nature</p>
+            <div class="titrerecherche">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleinne nature</p>
+            </div>
             <form method="post">
-                <p>
+                <span class="logorecherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input type="search" placeholder="Marseille, France" />
-                    <a href="">Rechercher</a>
-                </p>
+                </span>
+                <input type="search" placeholder="Marseille, France" />
+                <button>
+                    <span class="rechercher">Rechercher</span>
+                </button>
             </form>
-
-            <h3>Filtres</h3>
-            <i class="fas fa-money-bill-wave"></i>
-            <input type=button value=Économique />
-            <i class="fas fa-child"></i>
-            <input type=button value=Familial />
-            <i class="fas fa-heart"></i>
-            <input type=button value=Romantique />
-            <i class="fas fa-dog"></i>
-            <input type=button value=Animaux&nbsp;autorisés />
-
-            <p>
-                <i class="fas fa-info"></i> Plus de 500 logements sont disponible dans cette ville
-            </p>
+            <div class="filtre">
+                <h3>Filtres</h3>
+                <i class="fas fa-money-bill-wave"></i>
+                <input type=button value=Économique />
+                <i class="fas fa-child"></i>
+                <input type=button value=Familial />
+                <i class="fas fa-heart"></i>
+                <input type=button value=Romantique />
+                <i class="fas fa-dog"></i>
+                <input type=button value=Animaux&nbsp;autorisés />
+            </div>
+            <div class="info">
+                <p>
+                    <i class="fas fa-info"></i> Plus de 500 logements sont disponible dans cette ville
+                </p>
+            </div>
         </section>
         <!--hébergement-->
         <section class="hébergements" id="hébergements">
