finis CSS zone recherche et début des filtres

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 <p>En plein centre ville ou en pleinne nature</p>
             </div>
             <form method="post">
-                <span class="logorecherche">
-                    <i class="fas fa-map-marker-alt"></i>
-                </span>
-                <input type="search" placeholder="Marseille, France" />
-                <button>
-                    <span class="rechercher">Rechercher</span>
-                </button>
+                    <span class="logorecherche">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </span>
+                    <input type="search" placeholder="Marseille, France" class="zonerechercher" />
+                    <button>
+                        <span class="rechercher">Rechercher</span>
+                    </button>
             </form>
             <div class="filtre">
                 <h3>Filtres</h3>
