CSS  filtres en construction

--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
             </form>
             <div class="filtre">
                 <h3>Filtres</h3>
+                <div>
                 <i class="fas fa-money-bill-wave"></i>
-                <input type=button value=Économique />
+                Économique
+                </div>
+                <div>
                 <i class="fas fa-child"></i>
-                <input type=button value=Familial />
+                Familial
+                </div>
+                <div>
                 <i class="fas fa-heart"></i>
-                <input type=button value=Romantique />
+                Romantique
+                </div>
+                <div>
                 <i class="fas fa-dog"></i>
-                <input type=button value=Animaux&nbsp;autorisés />
+                Animaux&nbsp;autorisés
+                </div>
             </div>
             <div class="info">
                 <p>
