fin footer en CSS

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <!--footer-->
     <footer class="footer">
-        <div>
+        <div class="f1">
             <h3>A propos</h3>
             <ul>
                 <li> <a href="">Fonctionnement du site</a></li>
@@ -269,21 +269,20 @@
                 <li><a href="">Données et confidentialité</a></li>
             </ul>
         </div>
-        <div>
+        <div class="f2">
             <h3>Nos hébergements</h3>
             <ul>
                 <li><a href="">Charte qualité</a></li>
                 <li><a href="">Soumettre votre hôtel</a></li>
             </ul>
         </div>
-        <div>
+        <div class="f3">
             <h3>Assistance</h3>
             <ul>
                 <li><a href="">Centre d'aide</a></li>
                 <li><a href="">Nous contacter</a></li>
             </ul>
         </div>
-
     </footer>
     <!--footer-->
 
