fin du CSS / responsive a faire

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <i class="fas fa-star"></i>
                         </article>
                     </a>
-                    <a href="#">Afficher plus</a>
+                    <a class="afficher" href="#">Afficher plus</a>
                 </div>
             </div>
             <div class="populaires">
