--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <img src="assets/images/logo/Reservia@3x.png" alt="Reservia" />
         <nav>
             <ul class="navheader">
-                <li class="navheader1">
+                <li class="navheader1" id="héberg">
                     <a href="#hébergements">Hébergements</a>
                 </li>
-                <li class="navheader2">
+                <li class="navheader1">
                     <a href="#activités">Activités</a>
                 </li>
                 <li class="navheader3">
@@ -56,22 +56,24 @@
                     </button>
             </form>
             <div class="filtre">
-                <h3>Filtres</h3>
-                <div>
-                <i class="fas fa-money-bill-wave"></i>
-                Économique
-                </div>
-                <div>
-                <i class="fas fa-child"></i>
-                Familial
-                </div>
-                <div>
-                <i class="fas fa-heart"></i>
-                Romantique
-                </div>
-                <div>
-                <i class="fas fa-dog"></i>
-                Animaux&nbsp;autorisés
+                <h3 class=t1>Filtres</h3>
+                <div class="filtrelogo">
+                    <div class="l1">
+                        <i class="fas fa-money-bill-wave"></i>
+                        Économique
+                        </div>
+                        <div class="l2">
+                        <i class="fas fa-child"></i>
+                        Familial
+                        </div>
+                        <div class="l3">
+                        <i class="fas fa-heart"></i>
+                        Romantique
+                        </div>
+                        <div class="l4">
+                        <i class="fas fa-dog"></i>
+                        Animaux&nbsp;autorisés
+                        </div>
                 </div>
             </div>
             <div class="info">
